# cursor-review

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/cursor_cloud_review/: __main__.py  cli.py
tests/: test_basic.py
