[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-cloud-review"
version = "0.1.0"
description = "Trigger a Cursor Cloud agent review for the active pull request."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
]

[project.scripts]
cursor-cloud-review = "cursor_cloud_review.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cursor_cloud_review"]
